courses/430_programming-languages/assignment-4/tests/error/error13.sml
val prog =
  PROGRAM
    {decls=[],stmts=[ST_EXP {exp=EXP_UNARY {opnd=EXP_NONE,opr=UOP_NOT}}]}
  : program
;
